syntax = "proto3";

package metertimeseries.v1;

service MeterTimeSeries {
  rpc GetMeterTimeSeries (MeterTimeSeriesRequest) returns (MeterTimeSeriesResponse);
}

message MeterTimeSeriesRequest {
    string subject = 1;
    string actor = 2;

	string gsrn = 3;
	int64 dateFrom = 4;
	int64 dateTo = 5;
}

message MeterTimeSeriesResponse {
    GetMeterTimeSeriesResult get_meter_time_series_result = 1;
    GetMeterTimeSeriesRejection get_meter_time_series_rejection = 2;
}

message GetMeterTimeSeriesResult {
    repeated MeterTimeSeriesMeteringPoint meter_time_series_metering_point = 1;
}

message MeterTimeSeriesMeteringPoint {
    string metering_point_id = 1;
    string type_of_mp = 2;
    string consumer_start_date = 3;
    repeated MeteringPointState metering_point_states = 4;
}

message MeteringPointState {
	string settlement_method = 1;
	string meter_reading_occurrence = 2;
	string valid_from_date = 3;
	string valid_to_date = 4;
    repeated NonProfiledEnergyQuantity non_profiled_energy_quantities = 5;
}

message NonProfiledEnergyQuantity {
	string date = 1;
	repeated EnergyQuantityValue energy_quantity_values = 2;
}

message EnergyQuantityValue {
    string position = 1;
    string energy_quantity = 2;
    string energy_time_series_measure_unit = 3;
    string quantity_quality = 4;
    string quantity_missing_indicator = 5;
}

message GetMeterTimeSeriesRejection {
    repeated Rejection rejection = 1;
}

message Rejection {
    string metering_point_id = 1;
    string error_code = 2;
}
